apps/photoprism/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photos-wesl-io-deployment
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: photos-wesl-io-site
          image: photoprism/photoprism:20220121
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: photos
            - mountPath: /photoprism/storage
              name: storage
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: photos
          hostPath:
            path: /tank/media/photos
            type: Directory
        - name: storage
          persistentVolumeClaim:
            claimName: photoprism-pvc
        - name: tmp
          emptyDir: {}
