apps/photoprism/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
