apps/photoprism/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photos-wesl-io-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.wesl.io`)
      kind: Rule
      services:
        - name: photos-wesl-io-svc
          port: 80
